<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailUserActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="@color/PickledBluewood">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/menu_detail"
            app:titleTextColor="@color/white"
            app:title="@string/detail_user" />
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/appbar"
        tools:ignore="MissingConstraints">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_detail_profile"
            android:layout_width="97dp"
            android:layout_height="94dp"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_name"
            style="@style/nameprofile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginTop="18dp"
            android:layout_toEndOf="@+id/img_detail_profile"
            android:fontFamily="@font/poppins"
            tools:text="@string/profile_name" />

        <TextView
            android:id="@+id/tv_username"
            style="@style/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_name"
            android:layout_marginStart="17dp"
            android:layout_toEndOf="@+id/img_detail_profile"
            tools:text="@string/username" />

        <LinearLayout
            android:id="@+id/location_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_username"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <ImageView
                style="@style/icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:src="@drawable/baseline_location_on_24" />

            <TextView
                android:id="@+id/location"
                style="@style/textviewUserDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/location" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/website_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/location_section"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ImageView
                style="@style/icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:src="@drawable/baseline_web_24" />

            <TextView
                android:id="@+id/blog"
                style="@style/textviewUserDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/website" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/followers_following"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/website_section"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ImageView
                style="@style/icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:src="@drawable/baseline_people_outline_24" />

            <TextView
                android:id="@+id/tv_followers"
                style="@style/textviewUserDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                tools:text="@string/followers" />

            <ImageView
                style="@style/icon"
                android:layout_width="8dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:src="@drawable/baseline_circle_24" />

            <TextView
                android:id="@+id/tv_following"
                style="@style/textviewUserDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                tools:text="@string/follwing" />
        </LinearLayout>

    </RelativeLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:tabTextColor="@android:color/white" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabs" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_favorite"
        android:layout_width="wrap_content"
        android:src="@drawable/baseline_favorite_24"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:tint="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/floatButton"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>